// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codegen tokens > generates navigable tokens.ts and tokens.d.ts 1`] = `
"/* This file is generated by palette-kit build (Phase 7). */

export const tokens = {
bg: {
  /**
   * App background.
   * @token bg.app
   * @category bg
   */
  app: "bg.app",
  },
border: {
  /**
   * Default border color.
   * @token border.default
   * @category border
   */
  "default": "border.default",
  },
text: {
  /**
   * Primary text on standard surfaces.
   * @token text.primary
   * @category text
   * @states hover
   */
  primary: "text.primary",
  },
} as const;

export const tokenNames = [
  "bg.app",
  "border.default",
  "text.primary"
] as const;

export type TokenName = (typeof tokenNames)[number];

export type ColorRole = TokenName;
"
`;

exports[`codegen tokens > generates navigable tokens.ts and tokens.d.ts 2`] = `
"/* This file is generated by palette-kit build (Phase 7). */

export declare const tokens: {
bg: {
  /**
   * App background.
   * @token bg.app
   * @category bg
   */
  app: "bg.app";
  };
border: {
  /**
   * Default border color.
   * @token border.default
   * @category border
   */
  "default": "border.default";
  };
text: {
  /**
   * Primary text on standard surfaces.
   * @token text.primary
   * @category text
   * @states hover
   */
  primary: "text.primary";
  };
};

export declare const tokenNames: readonly [
  "bg.app",
  "border.default",
  "text.primary"
];

export type TokenName = (typeof tokenNames)[number];

export type ColorRole = TokenName;
"
`;
